--- a/notebook/public/index.html
+++ b/notebook/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
-		<title>Favorite Movie Database</title>
+		<title>NoteBook</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
